--- a/coffee_machine.html
+++ b/coffee_machine.html
@@ -99,6 +99,19 @@
                     display.innerText = ("Недостаточно средств");
                 }
             }
+            // 39
+            function getChange(num){
+                let coin = 0;
+                if (num>=10) coin = 10;
+                else if(num>=5) coin = 5;
+                else if(num>=2) coin = 2;
+                else if(num>=1) coin = 1;
+                // let coin = num>=10?10:num>=5?5:num>=2?2:num>=1?1:0;
+                if(coin){
+                    console.log(coin);
+                    getChange(num-coin);
+                }
+            }
         </script>
     </body>
 </html>
