--- a/coffee_machine.html
+++ b/coffee_machine.html
@@ -31,7 +31,7 @@
                 position: relative;
                 margin-bottom: 16px;
             }
-            .container{
+            .main-container{
                 background: rgba(255, 204, 128, .5);
             }
             .coffee-title>span{
@@ -48,10 +48,17 @@
                 background: navy;
                 color: white;
             }
+            img[src$="rub.jpg"]{
+                cursor: pointer;
+            }
+            img[src$="rub.jpg"]:hover{
+                filter: contrast(1.5);
+            }
+
         </style>
     </head>
     <body>
-        <div class="container py-3 my-5 border">
+        <div class="container py-3 my-5 border main-container">
             <div class="row">
                 <div class="col-sm-5">
                     <div class="coffee-title">
@@ -82,13 +89,20 @@
                         </div>
                         <div class="col-6">
                             <input type="number" id="money">
+                            <img src="/img/bill_acc.png" alt="">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="container">
+            <img src="/img/50rub.jpg" alt="">
+            <img src="/img/100rub.jpg" alt="">
+            <img src="/img/500rub.jpg" alt="">
+        </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
         <script>
+            let bills = document.querySelectorAll('img[src$="rub.jpg"]');
             let money = document.getElementById("money");
             let display = document.getElementById("display");
             function getCoffee(coffeeName, price){
