--- a/coffee_machine.html
+++ b/coffee_machine.html
@@ -4,6 +4,10 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Демо Bootstrap</title>
+        <script src="https://kit.fontawesome.com/750282b7c8.js" crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <style>
             body{
@@ -47,6 +51,7 @@
                 border: 3px groove black;
                 background: navy;
                 color: white;
+                font-family: 'Press Start 2P', cursive;
             }
             img[src$="rub.jpg"]{
                 cursor: pointer;
@@ -95,11 +100,17 @@
                 <div class="col-sm-7">
                     <div class="row">
                         <div class="col-6 text-center">
-                            <div id="display" class="py-3 text-center"></div>
-                            <button class="btn btn-lg btn-warning" onclick="getChange(money.value)">Получить сдачу</button>
+                            <div id="display" class="py-3 text-center">
+                                <p id="displayText">Выберите напиток</p>
+                                <p>Баланс: <span id="balance">0</span>руб.</p>
+                                <div class="progress" style="background: none">
+                                    <div style="transition: all 0s ease 0s;" class="progress-bar progress-bar-striped progress-bar-animated bg-light" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div>
+                            <button class="mt-3 btn btn-lg btn-warning" onclick="getChange(money.value)">Получить сдачу</button>
                         </div>
-                        <div class="col-6">
-                            <input type="number" id="money">
+                        <div class="col-6 text-center">
+                            <input type="number" hidden id="money">
                             <img src="/img/bill_acc.png" id="billAcc" alt="">
                             <div id="changeBox" class="mt-3"></div>
                         </div>
@@ -119,6 +130,8 @@
             let money = document.getElementById("money");
             let display = document.getElementById("display");
             let changeBox = document.getElementById('changeBox');
+            let balance = document.getElementById('balance');
+            let displayText = document.getElementById('displayText');
             const intRandom = (min, max)=>Math.floor(Math.random()*(max-min)+min);
             for (let i = 0; i < bills.length; i++) {
                 let bill = bills[i];
@@ -144,6 +157,7 @@
                         if(billAccTop < billTop && billAccRight>billRight && billAccLeft<billLeft && billAccBottom>billTop){
                             bill.hidden = true;
                             money.value = +money.value + (+bill.dataset.value);
+                            balance.innerText = money.value;
                         }
                     }
                 }
@@ -152,9 +166,27 @@
             function getCoffee(coffeeName, price){
                 if(money.value >= price){
                     money.value = money.value - price;
-                    display.innerText = ("Ваш "+coffeeName+" готов");
+                    balance.innerText = money.value;
+                    let progressBar = document.querySelector('.progress-bar');
+                    let i = 0;
+                    let timer = setInterval(()=>{
+                        i += 0.1;
+                        progressBar.style.width = i+"%";
+
+                        if(i>100) {
+                            clearInterval(timer);
+                            displayText.innerText = ("Ваш "+coffeeName+" готов");
+                            progressBar.style.width = 0+"%";
+                        }else if (i<33){
+                            displayText.innerHTML = `<i class="fas fa-hourglass-start"></i> Ожидайте...`;
+                        }else if(i<66){
+                            displayText.innerHTML = `<i class="fas fa-hourglass-half"></i> Ожидайте...`;
+                        }else if(i<100){
+                            displayText.innerHTML = `<i class="fas fa-hourglass-end"></i> Ожидайте...`;
+                        }
+                    }, 10);
                 }else{
-                    display.innerText = ("Недостаточно средств");
+                    displayText.innerText = ("Недостаточно средств");
                 }
             }
             // 39
@@ -178,6 +210,9 @@
                     changeBox.append(img);
                     //EVIL!!! changeBox.innerHTML += `<img src="/img/${coin}rub.png" width="50px" style="position: absolute; top: ${top}; left: ${left}">`;
                     getChange(num-coin);
+                }else{
+                    let audioObj = new Audio("/audio/coffee_machine_audio_getChange.mp3");
+                    audioObj.play();
                 }
             }
 
